--- a/.github/workflows/helloFlow.yml
+++ b/.github/workflows/helloFlow.yml
@@ -1,5 +1,8 @@
 name: Hello Flow
-on: workflow_dispatch
+on:
+  schedule:
+    - cron: "*/5 * * * *"
+  workflow_dispatch: {}
 
 jobs:
   first-job:
